[project]
name = "laniustw-api-client"
version = "3.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic", "httpx"]
classifiers = ["Programming Language :: Python :: 3.10"]

[tool.uv]
dev-dependencies = ["pre-commit>=3.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
