[project]
name = "laniustw-api-client"
version = "4.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.2", "laniustw-model>=0.2.0", "pydantic>=2.9.0"]
classifiers = ["Programming Language :: Python :: 3.10"]

[tool.uv]
dev-dependencies = ["pre-commit>=3.8.0"]
extra-index-url = [
    "https://gitlab.com/api/v4/projects/61310914/packages/pypi/simple"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
