[project]
name = "laniustw-api-client"
version = "6.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.2",
    "laniustw-model>=1.1.0",
    "pydantic>=2.9.0",
    "packaging"
]
classifiers = ["Programming Language :: Python :: 3.10"]

[tool.uv]
extra-index-url = [
    "https://gitlab.com/api/v4/projects/61310914/packages/pypi/simple"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
